[ADD] about us page

--- a/about.html
+++ b/about.html
@@ -60,74 +60,47 @@
     </header>
 
     <main>
-        <section id="hero-section">
-            <img width="100%" src="./assets/images/hero-image.png" />
+        <section id="about-section_0" class="p-4">
+            <h1 class="mb-0 text-center fw-bold">About Us</h1>
         </section>
-        <section class="container" id="home-section_1">
-            <div class="row">
-                <div clas="col-lg-12">
-                    <h3 class="fw-bold text-center p-5">Explore Mindfulness</h3>
-                </div>
-            </div>
+        <section class="container pt-5 pb-5" id="about-section_1">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="card text-center p-4">
-                        <img class="ms-auto me-auto mb-5" width="88" src="./assets/images/home-section_1-icon_1.png" />
-                        <p class="mb-5">Meditation is a gateway to inner peace, offering a unique space to pause, breathe, and
-                            reconnect with oneself. This ancient practice reduces stress, enhances focus, and promotes
-                            emotional well-being, making it essential for navigating today's fast-paced world. Embrace
-                            meditation as a daily ritual to cultivate a deeper sense of clarity, calmness, and balance
-                            in your life.</p>
-                        <button class="btn btn-dark m-auto">Start</button>
-                    </div>
+                    <h1 class="mb-5 fw-bold">Who are We</h1>
+                    <p class="mb-0">Welcome to Zen Oasis, your serene digital sanctuary dedicated to mindfulness and
+                        meditation. Amidst the hustle and bustle of modern life, finding a moment of peace can be a
+                        challenge. We provide a tranquil online space designed for stressed professionals,
+                        mindfulness enthusiasts, and self-care beginners. Zen Oasis is founded on the belief that
+                        simplicity is key. Our platform blends nature-inspired tranquility with practical relaxation
+                        activities, skillfully crafted to help you unwind, refocus, and embrace the calming practice
+                        of mindfulness.</p>
                 </div>
-                <div class="col-lg-6">
-                    <div class="card text-center p-4">
-                        <img class="ms-auto me-auto mb-5" width="88" src="./assets/images/home-section_1-icon_2.png" />
-                        <p class="mb-5">Breathing exercises are a powerful tool for managing stress and improving mental clarity. By
-                            focusing on controlled, mindful breathing, they help calm the mind, reduce anxiety, and
-                            enhance overall emotional well-being. Simple yet effective, these exercises are an essential
-                            part of daily self-care, promoting a sense of inner peace and balance.</p>
-                        <button class="btn btn-dark m-auto">Start</button>
-                    </div>
+                <div class="col-lg-6 my-auto">
+                    <img class="" width="100%" src="./assets/images/about-section_1-img_1.png" />
                 </div>
             </div>
 
         </section>
-        <section class="container-fluid g-0" id="home-section_2">
-            <div class="row">
-                <div clas="col-lg-12">
-                    <h3 class="fw-bold text-center p-5">Virtual Mindfulness Garden</h3>
-                </div>
-            </div>
-            <div class="row g-0 content-row">
-                <div class="col-lg-6">
-                    <img width="100%" src="./assets/images/home-section_2-img_1.png" />
-                </div>
-                <div class="col-lg-6 my-auto p-5">
-                    <p class="mb-5">Explore our Virtual Garden, a tranquil space on our mindfulness website where floating
-                        butterflies represent community members in peaceful activities. Hovering over each butterfly
-                        reveals their mindfulness journey, fostering a sense of community without overcomplicating the
-                        page. This serene and simple feature unites and inspires, celebrating our shared path to
-                        well-being.</p>
-                    <button class="btn btn-dark m-auto">Explore</button>
-                </div>
-            </div>
-        </section>
-        <section class="container pt-5 pb-5" id="home-section_3">
+        <section class="container pt-5 pb-5 border-top border-bottom" id="about-section_2">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="card card-with-bg text-center p-5">
-                        <h4 class="fw-bold">About Us</h4>
-                        <p>Welcome to our mindful sanctuary, where tranquility meets intention. Explore a harmonious
-                            journey towards well-being with our curated resources and practices.</p>
+                    <div class="card text-center p-4">
+                        <h3 class="mb-5 fw-bold">Mission</h3>
+                        <p class="mb-0">Zen Oasis is dedicated to making mindfulness and meditation accessible and
+                            simple. Our
+                            mission is to guide you towards mental well-being through our Virtual Garden, guided
+                            sessions, and resources, turning self-care into an effortless part of your daily routine.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="card card-with-bg text-center p-5">
-                        <h4 class="fw-bold">Contact</h4>
-                        <p>Have questions or suggestions? Reach out to us at zen.oasis@something.com for a mindful
-                            conversation. Let's connect and cultivate mindfulness together.</p>
+                    <div class="card text-center p-4">
+                        <h3 class="mb-5 fw-bold">Vision</h3>
+                        <p class="mb-0">Zen Oasis envisions a world where mindfulness is as commonplace as morning
+                            coffee, prioritizing mental well-being for all. Our platform aims to be a haven for diverse
+                            individuals to learn and grow, aspiring to lead as a global resource for mindfulness and
+                            meditation, nurturing universal peace of mind.
+                        </p>
                     </div>
                 </div>
             </div>
