--- a/meditation.html
+++ b/meditation.html
@@ -68,66 +68,95 @@
     </header>
 
     <main>
-        <section id="contact-section_0" class="p-4">
-            <h1 class="mb-0 text-center fw-bold">Contact Us</h1>
-        </section>
-        <section class="container pt-5 pb-5" id="about-section_1">
+        <section id="meditation-section_0" class="container pt-5 pb-5">
             <div class="row">
-                <div class="col-lg-4 text-center">
-                    <img class="mb-5" width="60" src="./assets/images/contact-section_0-icon_1.png" />
-                    <p class="mb-0">5899 Decker Drive<br />Suite 7015(Las Colinas) <br />Irving, TX 79969</p>
+                <div class="col-lg-6 my-auto">
+                    <h1 class="mb-5 fw-bold">Meditation</h1>
+                    <p class="mb-0">Meditation is a gateway to inner peace, offering a unique space to pause, breathe,
+                        and reconnect with oneself. This ancient practice reduces stress, enhances focus, and promotes
+                        emotional well-being, making it essential for navigating today's fast-paced world. Embrace
+                        meditation as a daily ritual to cultivate a deeper sense of clarity, calmness, and balance in
+                        your life.</p>
                 </div>
-                <div class="col-lg-4 text-center">
-                    <img class="mb-5" width="60" src="./assets/images/contact-section_0-icon_2.png" />
-                    <p class="mb-0"><a href="tell:+14371111111">+1-437-xxx-xxxx</a></p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <img class="mb-5" width="60" src="./assets/images/contact-section_0-icon_3.png" />
-                    <p class="mb-0"><a href="mailto:zen.oasis@mindfulzen.com">zen.oasis@mindfulzen.com</a></p>
+                <div class="col-lg-6 my-auto">
+                    <img class="" width="100%" src="./assets/images/meditation-section_0-img_1.png" />
                 </div>
             </div>
-
         </section>
-        <section class="container-fluid g-0 pt-5 pb-5" id="contact-section_2">
+        <section class="container-fluid g-0 pt-5 pb-5" id="meditation-section_1">
             <div class="row">
-                <div class="offset-lg-4 col-lg-4">
-                    <div class="">
-                        <h1 class="mb-5 fw-bold text-white text-center">Get In <span
-                                class="font-color-primary">Touch</span></h1>
-                        <form>
-                            <div class="mb-3">
-                                <label for="name" class="form-label text-white">Name</label>
-                                <input type="text" class="form-control" id="name">
-                            </div>
+                <div class="col-lg-12">
+                    <h3 class="fw-bold text-center p-5">Become Mindful</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3">
+                    <ul class="nav nav-pills mb-3 nav-fill" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
+                                aria-selected="true">Guided</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
+                                aria-selected="false">Unguided</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
+                                aria-selected="false">Mantra</button>
+                        </li>
+                    </ul>
 
-                            <div class="mb-3">
-                                <label for="email" class="form-label text-white">Email</label>
-                                <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-
+                </div>
+                <div class="col-lg-12">
+                    <div class="tab-content pb-5 pt-5" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                            aria-labelledby="pills-home-tab">
+                            <div class="row">
+                                <div class="col-lg-6 offset-lg-3 text-center">
+                                    <img class="mb-5 mt-5" src="./assets/images/meditation-section_1-icon_1.png" />
+                                    <p class="mb-5">Guided Meditation involves following the voice of an instructor,
+                                        often through audio recordings, leading you through a series of relaxation and
+                                        mindfulness exercises. It's ideal for beginners or those seeking structured
+                                        mindfulness practices.</p>
+                                    <button class="btn btn-dark m-auto">Start Session</button>
+                                </div>
                             </div>
-                            <div class="mb-3">
-                                <label for="phone" class="form-label text-white">Phone</label>
-                                <input type="text" class="form-control" id="phone">
+                        </div>
+                        <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+                            aria-labelledby="pills-profile-tab">
+                            <div class="row">
+                                <div class="col-lg-6 offset-lg-3 text-center">
+                                    <img class="mb-5 mt-5" src="./assets/images/meditation-section_1-icon_2.png" />
+                                    <p class="mb-5">Unguided Meditation, also known as silent meditation, is a more
+                                        personal experience where individuals meditate without guidance, relying on
+                                        their own techniques and rhythms. This form suits those who prefer a
+                                        self-directed approach to mindfulness.</p>
+                                    <button class="btn btn-dark m-auto">Start Session</button>
+                                </div>
                             </div>
-                            <div class="mb-5">
-                                <label for="phone" class="form-label text-white">Message</label>
-                                <textarea class="form-control"></textarea>
+                        </div>
+                        <div class="tab-pane fade" id="pills-contact" role="tabpanel"
+                            aria-labelledby="pills-contact-tab">
+                            <div class="row">
+                                <div class="col-lg-6 offset-lg-3 text-center">
+                                    <img class="mb-5 mt-5" src="./assets/images/meditation-section_1-icon_3.png" />
+                                    <p class="mb-5">Mantra Meditation focuses on the repetition of a specific word,
+                                        phrase, or sound, such as the classic "Om." This repetition helps clear the mind
+                                        and deepen concentration, making it a powerful tool for achieving mental clarity
+                                        and tranquility.</p>
+                                    <button class="btn btn-dark m-auto">Start Session</button>
+                                </div>
                             </div>
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-light m-auto">Send</button>
-                            </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
-
             </div>
+
         </section>
-        <section class="container-fluid g-0" id="contact-section_3">
-            <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0"
-                    marginwidth="0"
-                    src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(Zen%20Oasis)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
-                        href="https://www.maps.ie/population/">Find Population on Map</a></iframe></div>
-        </section>
+
     </main>
     <footer class="border-top pt-5 pb-5">
         <div class="container">
