[ADD] breathings popups

--- a/breathing.html
+++ b/breathing.html
@@ -137,7 +137,8 @@
                                         parts – inhaling, holding, exhaling, and holding again, each for the same count.
                                         This technique is effective in managing stress, increasing concentration, and
                                         restoring mental clarity.</p>
-                                    <button class="btn btn-dark m-auto">Start Session</button>
+                                    <button class="btn btn-dark m-auto" data-bs-toggle="modal"
+                                        data-bs-target="#box">Start Session</button>
                                 </div>
                             </div>
                         </div>
@@ -150,7 +151,8 @@
                                         breath during daily activities. This practice aids in anchoring the mind in the
                                         present moment, reducing anxiety, and enhancing overall mindfulness, thereby
                                         improving emotional and mental well-being.</p>
-                                    <button class="btn btn-dark m-auto">Start Session</button>
+                                    <button class="btn btn-dark m-auto" data-bs-toggle="modal"
+                                    data-bs-target="#round">Start Session</button>
                                 </div>
                             </div>
                         </div>
@@ -172,6 +174,42 @@
                         </div>
                         <h3 class="mb-5 text-center">Deep Calm</h3>
                         <div class="triangle-container">
+                            <div class="dot"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="box" tabindex="-1" role="dialog" aria-labelledby="boxLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="d-flex justify-content-end">
+                            <a type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </a>
+                        </div>
+                        <h3 class="mb-5 text-center">Box</h3>
+                        <div class="square-container">
+                            <div class="dot"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="round" tabindex="-1" role="dialog" aria-labelledby="roundLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <div class="d-flex justify-content-end">
+                            <a type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </a>
+                        </div>
+                        <h3 class="mb-5 text-center">Awake</h3>
+                        <div class="circle-container">
                             <div class="dot"></div>
                         </div>
                     </div>
